v1.2.1 fix dragging drags the whole page on mobile fix dragging draws elements outside the sketch area

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ button:active {
     display: grid;
     gap: 0;
 
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 .sketch-area .pixel {
